# imei-checker

./: .env.example  README.md  pyproject.toml
api_app/: main.py  schemas.py  services.py
bot/: bot_app.py
core/: settings.py
utils/: http_client.py  imei_verification.py
